[package]
name = "medianheap"
version = "0.4.1"
edition = "2021"
authors = ["Markus Reiter <me@reitermark.us>"]
license = "MIT OR Apache-2.0"
readme = "ReadMe.md"
description = "A median heap for keeping track of a running median."
documentation = "https://docs.rs/medianheap"
repository = "https://github.com/reitermarkus/medianheap-rs"
homepage = "https://github.com/reitermarkus/medianheap-rs"
keywords = ["median", "heap"]
categories = ["data-structures"]

[dependencies]
min-max-heap = "1.3"

[features]
default = []

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "max_size_push"
harness = false
